--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">I Want A Donut</string>
     <string name="action_settings">Settings</string>
     <string name="action_about">Tell me about your craving</string>
+    <string name="edit_message">Enter a message</string>
+    <string name="button_send">Send</string>
 
 </resources>
