--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="action_about">Tell me about your craving</string>
     <string name="edit_message">Enter a message</string>
     <string name="button_send">Send</string>
+    <string name="title_activity_display_message">" My Message"</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
